# djk_kalender

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy_webapp.yml
backend/: main.py
backend/build_ics/: ics_creation.py  scraping.py
create_ics/: main.py
djk-kalender-app/: backend.py
djk-kalender-app/src/: app.js  index.html  styles.css
