[project]
name = "djk-kalender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.115.7",
    "ics>=0.7.2",
    "pytz>=2024.2",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
